修改节点 去除节点分组，简化节点配置 节点分两层，父节点(不挂载主题)，子节点(挂载主题)